--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-spring.data.mongodb.host=10.0.10.2
-spring.data.mongodb.port=27017
-spring.data.mongodb.authentication-database=user_history
-spring.data.mongodb.username=marketplace-userhistory
-spring.data.mongodb.password=marketplace-userhistory
-spring.data.mongodb.database=user_history
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://10.0.10.2:3306/history
+spring.datasource.username=root
+spring.datasource.password=springingdream
+spring.application.name=marketplace-userhistory
+
+eureka.client.serviceUrl.defaultZone=http://my.dekinci.com:10100/eureka
+eureka.client.register-with-eureka=true
+
+spring.main.allow-bean-definition-overriding=true
 
 server.port=10000
