--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://10.0.10.2:3306/history
-spring.datasource.username=root
-spring.datasource.password=springingdream
+spring.datasource.username=marketplace-history
+spring.datasource.password=marketplace-history
 spring.application.name=marketplace-userhistory
 
 eureka.client.serviceUrl.defaultZone=http://my.dekinci.com:10100/eureka
