--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://10.0.10.2:3306/history
+spring.datasource.url=jdbc:mysql://10.0.10.2:3306/history?useSSL=false
 spring.datasource.username=marketplace-history
 spring.datasource.password=marketplace-history
-spring.application.name=marketplace-userhistory
+server.port=10005
 
+spring.application.name=marketplace-history
+eureka.instance.home-page-url-path=/api/history
+eureka.instance.ip-address=my.dekinci.com
 eureka.client.serviceUrl.defaultZone=http://my.dekinci.com:10100/eureka
 eureka.client.register-with-eureka=true
-
+eureka.instance.preferIpAddress=true
+eureka.instance.lease-renewal-interval-in-seconds=1
+eureka.instance.lease-expiration-duration-in-seconds=2
 spring.main.allow-bean-definition-overriding=true
-
-server.port=10000
