--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://10.0.10.2:3306/history?useSSL=false
+spring.datasource.url=jdbc:mysql://10.0.10.2:3306/history?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=marketplace-history
 spring.datasource.password=marketplace-history
 server.port=10005
